--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "openai": "^6.10.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.2",
     "zod": "^3.24.1"
