Refactor API request body handling across multiple routes to enforce type safety and improve error handling. Update local storage token retrieval in generate_token_script.js to prevent errors from null values. Exclude token generation scripts from TypeScript compilation in tsconfig.json for cleaner project structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,13 @@
     "next.config.mjs",
     "env.d.ts"
   ],
-  "exclude": ["node_modules", "tsconfig.json", "public/sw.js", "public/workbox-*.js", "public/fallback-*.js"]
+  "exclude": [
+    "node_modules",
+    "tsconfig.json",
+    "public/sw.js",
+    "public/workbox-*.js",
+    "public/fallback-*.js",
+    "generate_token_script.js",
+    "get_token_browser_generated.js"
+  ]
 }
